--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.5.0",
+    "apollo-server-core": "^3.5.0",
     "graphql": "^16.2.0",
     "node-fetch": "^3.1.0"
   }
